--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,7 +1,7 @@
 <div class="category-container">
     <h2>Kategoriler</h2>
     <div class="category-list">
-        <div class="category-card" *ngFor="let category of categories">
+        <div class="category-card" *ngFor="let category of categories" (click)="setCurrentCategory(category)">
             {{ category.name }}
         </div>
     </div>
