--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,22 +1,19 @@
 <div class="navbar">
   <div class="logo">Prolife</div>
-
-  <div class="navbar-center">
-    <input class="search-input" type="text" placeholder="Ürün ara..." />
-  </div>
-
   <div class="cart-btn" (click)="toggleCartDropdown()">
     <i class="fas fa-shopping-cart"></i>
-    <span class="cart-count">2</span>
+    <span *ngIf="cartItems.length>0" class="cart-count">{{cartItems.length}}</span>
 
     <div class="cart-dropdown" *ngIf="isCartOpen">
       <div class="cart-item" *ngFor="let item of cartItems">
-        <span>{{ item.name }}</span>
-        <span>{{ item.price | currency }}</span>
+        <span>{{ item.product.name}}</span>
+        <span>{{ item.quantity }}</span>
+        <!-- <span>{{ item.price | currency }}</span> -->
+        <button class="btn-remove-item" (click)="removeItem(item)">Sil</button>
       </div>
       <div class="cart-actions">
-        <button class="btn-view">Sepete Git</button>
-        <button class="btn-checkout">Satın Al</button>
+        <button class="btn-clear-cart" (click)="clearCart()">Sepeti Temizle</button>
+        <button class="btn-checkout" (click)="routeToCart()">Sepete Git</button>
       </div>
     </div>
   </div>
