--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -14,20 +14,7 @@
     color: $accent-color;
   }
 
-  .search-input {
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: $border-radius;
-    width: 300px;
-    max-width: 100%;
-    background-color: #444;
-    color: $text-color;
-
-    &:focus {
-      outline: none;
-      background-color: #555;
-    }
-  }
+  
 
   .cart-btn {
     position: relative;
@@ -70,11 +57,25 @@
         justify-content: space-between;
         margin-bottom: 0.5rem;
         color: $text-color;
+
+        .btn-remove-item {
+          background: none;
+          border: none;
+          color: red;
+          font-size: 1rem;
+          cursor: pointer;
+          transition: $transition;
+
+          &:hover {
+            color: $accent-color;
+          }
+        }
       }
 
       .cart-actions {
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
+        gap: 1rem;
         margin-top: 1rem;
 
         button {
@@ -84,18 +85,22 @@
           cursor: pointer;
           transition: $transition;
 
-          &.btn-view {
-            background-color: $accent-color;
-            color: black;
+          &.btn-clear-cart {
+            background-color: red;
+            color: white;
+
+            &:hover {
+              background-color: darkred;
+            }
           }
 
           &.btn-checkout {
-            background-color: #333;
-            color: $text-color;
+            background-color: $accent-color;
+            color: black;
 
             &:hover {
-              background-color: $accent-color;
-              color: black;
+              background-color: #333;
+              color: $text-color;
             }
           }
         }
@@ -111,9 +116,7 @@
       width: 100%;
       margin: 0.5rem 0;
 
-      .search-input {
-        width: 100%;
-      }
+      
     }
 
     .navbar-right {
