--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,7 +22,7 @@
 
         <div class="auth-links">
             <a routerLink="/register">Kayıt Ol</a> |
-            <a routerLink="/reset-password">Parolamı Unuttum</a>
+            <a routerLink="/forgot-password">Parolamı Unuttum</a>
         </div>
     </form>
 </div>
