--- a/src/app/components/pages/unauthorized/unauthorized.component.html
+++ b/src/app/components/pages/unauthorized/unauthorized.component.html
@@ -1,1 +1,6 @@
-<h1>Yetkiniz Yok!</h1>
+<div class="unauthorized">
+    <h1>403</h1>
+    <h2>Yetkisiz Giriş</h2>
+    <p>Bu sayfaya erişim yetkiniz yok.</p>
+    <a routerLink="/login">Giriş Sayfasına Dön</a>
+</div>
