--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,31 +1,11 @@
 <div class="auth-container">
-    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="auth-form">
-        <h2>Kayıt Ol</h2>
-
-        <div class="form-group">
-            <label for="firstName">Ad</label>
-            <input id="firstName" type="text" formControlName="firstName" placeholder="Ad" />
-        </div>
-
-        <div class="form-group">
-            <label for="lastName">Soyad</label>
-            <input id="lastName" type="text" formControlName="lastName" placeholder="Soyad" />
-        </div>
-
-        <div class="form-group">
-            <label for="email">E‑posta</label>
-            <input id="email" type="email" formControlName="email" placeholder="E‑posta" />
-        </div>
-
-        <div class="form-group">
-            <label for="password">Şifre</label>
-            <input id="password" type="password" formControlName="password" placeholder="Şifre" />
-        </div>
-
-        <button type="submit" [disabled]="registerForm.invalid">Kayıt Ol</button>
-
-        <div class="auth-links">
-            <a routerLink="/login">Zaten hesabın var mı? Giriş yap</a>
-        </div>
+    <h2>Kayıt Ol</h2>
+    <form [formGroup]="registerForm" (submit)="onSubmit()">
+        <input type="text" placeholder="Ad" formControlName="firstName" name="firstName" required />
+        <input type="text" placeholder="Soyad" formControlName="lastName" name="lastName" required />
+        <input type="email" placeholder="E-posta" formControlName="email" name="email" required />
+        <input type="password" placeholder="Şifre" formControlName="password" name="password" required />
+        <button type="submit">Kayıt Ol</button>
+        <a routerLink="/login" class="link">Zaten hesabım var</a>
     </form>
 </div>
