--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,3 @@
-<footer class="footer-container">
-    <div class="footer-content">
-        <p>© 2025 Prolife Plastik. Tüm hakları saklıdır.</p>
-        <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-        </div>
-    </div>
+<footer class="footer">
+    <p>© {{ year }} Prolife Plastik. Tüm hakları saklıdır.</p>
 </footer>
