--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -2,7 +2,8 @@
     <h2>Kategoriler</h2>
     <div class="category-list">
         <div class="category-card" *ngFor="let category of categories" (click)="setCurrentCategory(category)">
-            {{ category.name }}
+            <i class="category-icon fas fa-box"></i>
+            <span>{{ category.name }}</span>
         </div>
     </div>
 </div>
