--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,8 +1,8 @@
 .footer {
-  text-align: center;
-  padding: 1rem;
+  width: 100%;
   background-color: var(--card-bg);
   color: var(--text-color);
-  font-size: 0.9rem;
-  margin-top: 2rem;
+  padding: 1rem 2rem;
+  text-align: center;
+  margin-top: auto;
 }
