--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,31 +1,8 @@
 <div class="home-container">
+    <app-navbar></app-navbar>
     <section class="main-content">
         <app-category></app-category>
         <app-product></app-product>
     </section>
+    <app-footer></app-footer>
 </div>
-
-<!-- <div class="home">
-    <section class="hero">
-        <h1>Prolife Plastik'e Hoş Geldiniz</h1>
-        <p>Kaliteli plastik ürünler, uygun fiyatlarla.</p>
-        <a routerLink="/products">
-            <button>Ürünleri İncele</button>
-        </a>
-    </section>
-
-    <section class="features">
-        <div class="feature-card">
-            <h3>Geniş Ürün Yelpazesi</h3>
-            <p>Birçok kategori ve marka seçeneğiyle aradığınız her şey burada.</p>
-        </div>
-        <div class="feature-card">
-            <h3>Stokta Ürün Garantisi</h3>
-            <p>Stokta olan ürünlerimiz hızlıca gönderime hazırdır.</p>
-        </div>
-        <div class="feature-card">
-            <h3>Hızlı Destek</h3>
-            <p>Her türlü sorunuz için bize kolayca ulaşabilirsiniz.</p>
-        </div>
-    </section>
-</div> -->
