--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -7,6 +7,7 @@
             <a routerLink="categories" routerLinkActive="active">Kategori Yönetimi</a>
             <a routerLink="brands" routerLinkActive="active">Marka Yönetimi</a>
             <a routerLink="users" routerLinkActive="active">Kullanıcı Yönetimi</a>
+            <a routerLink="orders" routerLinkActive="active">Sipariş Yönetimi</a>
         </nav>
     </aside>
 
